# fastremap

./: .dockerignore  .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  MANIFEST.in  README.md  appveyor.yml  automated_test.py  fastremap.cpp  fastremap.pxd  fastremap.pyx  ipt.hpp  libdivide.h  manylinux1.Dockerfile  manylinux2010.Dockerfile  manylinux2014.Dockerfile  mypy.allowlist  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  ska_flat_hash_map.hpp  test.cpp  test.py  tox.ini
.github/workflows/: build_wheel.yml  lint.yml  test.yml
fastremap/: __init__.py  fastremap.pyi  fastremap.pyx
src/: fastremap.pyi  fastremap.pyx
src/fastremap/: fastremap.pyx  ska_flat_hash_map.hpp
