[metadata]
name = fastremap
url = https://github.com/seung-lab/fastremap/
summary = Remap, mask, renumber, unique, and in-place transposition of 3D labeled images. Point cloud too. 
description_file_content_type = text/markdown
description_file = README.md
author = William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/fastremap/
licenses = LGPL-3.0
classifier =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Utilities

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages = fastremap

[bdist_wheel]
universal = 0